<resources>
    <string name="app_name">收费稽查</string>


    <string name="login_user">用户名</string>
    <string name="login_pwd">密码</string>
    <string name="login_copyright">版权所有©2016</string>
    <string name="login_copyright2">安徽皖通科技股份有限公司</string>

    <string name="please_input">请输入</string>

    <string name="user_info">登录人信息</string>
    <string name="user_info_name">当前登录人</string>
    <string name="user_info_num">登录人工号</string>
    <string name="user_info_unit">单位名称</string>
    <string name="user_info_dep">电子邮箱</string>
    <string name="user_info_phone">办公电话</string>
    <string name="user_info_mphone">移动电话</string>

    <string name="bus_title">业务联系单</string>

    <string name="green_name">绿通档案</string>
    <string name="green_car_info">车辆信息</string>
    <string name="green_car_num">车牌号</string>
    <string name="green_car_type">车辆类别</string>
    <string name="green_factory_type">厂牌型号</string>
    <string name="green_capacity">有效容积(%)</string>
    <string name="green_axleCount">轴数</string>
    <string name="green_tonnage">吨位(吨)</string>
    <string name="green_jianyan_info">查验信息</string>
    <string name="green_reportOrgID">上报单位</string>
    <string name="green_check_time">查验时间</string>
    <string name="green_entrance">入口站址</string>
    <string name="green_come_dao">出口车道号</string>

    <string name="green_OprName">收费员</string>
    <string name="green_class">班长</string>
    <string name="green_type">绿通类型</string>
    <string name="green_jianmian">是否减免</string>
    <string name="green_jianmian_yes">是</string>
    <string name="green_jianmian_no">否</string>
    <string name="green_FreeMoney">减免金额</string>
    <string name="green_EscapeMoney">增收金额</string>
    <string name="green_goods_name">货物名称</string>
    <string name="green_goods_name_hui">混货物名称</string>
    <string name="green_remark">备注</string>
    <string name="green_photo">上传照片</string>

    <string name="green_edit">编辑</string>
    <string name="green_submit">提交</string>
    <string name="iv_delete">删除</string>
    <string name="iv_xiafachuli">处理</string>


    <string name="increment_name">增收信息</string>
    <string name="increment_entrance">入口站：</string>
    <string name="increment_entrance_type">入口判型：</string>
    <string name="increment_exit_type">出口判型：</string>
    <string name="increment_inspect_time">查处时间：</string>
    <string name="increment_inspect_unit">查处单位：</string>
    <string name="increment_total_money">增收金额：</string>

    <string name="increment_add_name">添加增收</string>
    <string name="increment_check_unit">查处单位</string>
    <string name="increment_check_time">查处时间</string>
    <string name="increment_charge_num">收费员工号</string>
    <string name="increment_charge_name">收费员工姓名</string>
    <string name="increment_classes">班次</string>
    <string name="increment_class_name">班长姓名</string>
    <string name="increment_charge_info">收费信息</string>
    <string name="increment_type">堵漏增收类型</string>
    <string name="increment_entrance_pan">入口判型</string>
    <string name="increment_exit_pan">出口判型</string>
    <string name="increment_entrance_loca">入口站址</string>
    <string name="increment_shi_money">实收金额(元)</string>
    <string name="increment_zeng_money">增收金额(元)</string>
    <string name="increment_zhou_shuo">轴数(轴)</string>
    <string name="increment_dun_shuo">吨数(吨)</string>

    <string name="name_roll_manage_title">名单管理</string>
    <string name="name_roll_manage_xiafa">下发名单查询</string>
    <string name="name_roll_title">添加黑名单</string>
    <string name="name_roll_color">车牌颜色</string>
    <string name="name_roll_car_color">车身颜色</string>
    <string name="name_roll_factory">厂牌型号</string>
    <string name="name_roll_car_type">车辆类别</string>
    <string name="name_roll_carx_type">车型类别</string>
    <string name="name_roll_seating">座位数</string>
    <string name="name_roll_info">违章信息</string>
    <string name="name_roll_tongxi">通行卡号</string>
    <string name="name_roll_weizhang">违章时间</string>
    <string name="name_roll_weizhang_type">违章类型</string>
    <string name="name_roll_weizhang_addr">违章地点</string>
    <string name="name_roll_xingshi">行驶区间</string>
    <string name="name_roll_qingkuang">情况说明</string>
    <string name="name_roll_remak">备注</string>
    <string name="name_roll_photo">上传照片/视频</string>

    <string name="name_roll_grey_title">添加灰名单</string>
    <string name="name_roll_grey_car_all">车辆所有者信息</string>
    <string name="name_roll_grey_car">车辆所有者</string>
    <string name="name_roll_grey_type">所有者类别</string>
    <string name="name_roll_grey_addr">通讯地址</string>
    <string name="name_roll_grey_postal">邮政编码</string>
    <string name="name_roll_grey_phone">联系电话</string>
    <string name="name_roll_grey_mobile_phone">手机号码</string>
    <string name="name_roll_grey_info">历史违章情况</string>

    <string name="name_roll_yellow_title">添加黄名单</string>

    <string name="tv_name_roll_type">名单类型</string>
    <string name="balck_name">黑名单</string>
    <string name="grey_name">灰名单</string>
    <string name="yellow_name">黄名单</string>

    <string name="xiafa_handle_title">处理信息</string>
    <string name="xiafa_handle_name">当事人姓名</string>
    <string name="xiafa_handle_bujiao">补缴金额</string>
    <string name="xiafa_handle_xingshi">行驶证档案号</string>
    <string name="xiafa_handle_jiashi">驾驶证档案号</string>
    <string name="xiafa_handle_chili">处理人</string>
    <string name="xiafa_handle_chili_info">处理备注</string>
    <string name="xiafa_handle_chili_hint">至少为两人，之间用、号隔开</string>

    <string name="information">业务资料</string>
    <string name="information_attachment">资料附件</string>

    <string name="tv_name_contact_list">联系电话</string>

    <string name="outlist_start_time">起始时间</string>
    <string name="outlist_end_time">结束时间</string>
    <string name="outlist_out_loca">出口站址</string>
    <string name="outlist_out_veh">出口车道号</string>
    <string name="outlist_lane_type">车道类型</string>
    <string name="outlist_veh_type">车型</string>
    <string name="outlist_veh_seed">车种</string>
    <string name="outlist_veh_plate">车牌</string>
    <string name="outlist_car">卡号</string>
    <string name="outlist_charge">收费员工号</string>

    <string name="outlist_name">名单</string>
    <string name="outlist_green">绿通</string>
    <string name="outlist_increment">增收</string>

    <string name="outlist_info_entrance">入口信息</string>
    <string name="outlist_info_entrance_loca">入口站址</string>
    <string name="outlist_info_entrance_lane">入口车道号</string>
    <string name="outlist_info_entrance_veh">入口车牌</string>
    <string name="outlist_info_zhong">车种</string>
    <string name="outlist_info_veh_type">车型</string>
    <string name="outlist_info_chage">收费员工号</string>
    <string name="outlist_info_time">操作时间</string>
    <string name="outlist_info_out_info">出口信息</string>
    <string name="outlist_info_out_loca">出口站址</string>
    <string name="outlist_info_out_lane">出口车道号</string>
    <string name="outlist_info_out_veh">出口车牌</string>
    <string name="outlist_info_out_zhong">车种</string>
    <string name="outlist_info_out_veh_type">车型</string>
    <string name="outlist_info_yufu_veh">预付卡车牌</string>
    <string name="outlist_info_zhekou_money">折扣前金额</string>
    <string name="outlist_info_yingshou_money">应收金额</string>
    <string name="outlist_info_shishou_money">实收金额</string>
    <string name="outlist_info_veh_num">车票号</string>
    <string name="outlist_info_licheng">里程</string>
    <string name="outlist_info_zhoushu">轴数</string>
    <string name="outlist_info_zhongliang">重量</string>
    <string name="outlist_info_tong_car_num">通行卡号</string>
    <string name="outlist_info_special_event">特殊事件</string>

</resources>
