<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/main_toop"
        layout="@layout/toolbar_other" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="#b2b2b2" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadingEdge="vertical"
        android:fillViewport="false"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/gray2"
            android:orientation="vertical">

            <TextView
                style="@style/title_bg"
                android:text="@string/xiafa_handle_title" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout style="@style/electron_outer_linearLayout">

                    <TextView
                        style="@style/electron_tv_title"
                        android:text="@string/xiafa_handle_name" />

                    <LinearLayout
                        style="@style/electron_linearLayout"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/ed_name"
                            style="@style/electron_ed_content"
                            android:hint="@string/please_input" />

                    </LinearLayout>


                </RelativeLayout>

                <View style="@style/view_line" />

                <RelativeLayout
                    style="@style/electron_outer_linearLayout"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/electron_tv_title"
                        android:text="@string/xiafa_handle_bujiao" />

                    <LinearLayout
                        style="@style/electron_linearLayout"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/ed_bujiao"
                            style="@style/electron_ed_content"
                            android:numeric="decimal" />

                    </LinearLayout>
                </RelativeLayout>

                <View style="@style/view_line" />

                <RelativeLayout
                    style="@style/electron_outer_linearLayout"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/electron_tv_title"
                        android:text="@string/xiafa_handle_xingshi" />

                    <LinearLayout
                        style="@style/electron_linearLayout"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/ed_xingshi"
                            style="@style/electron_ed_content"
                            android:hint="@string/please_input" />

                    </LinearLayout>

                </RelativeLayout>

                <View style="@style/view_line" />

                <RelativeLayout
                    style="@style/electron_outer_linearLayout"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/electron_tv_title"
                        android:text="@string/xiafa_handle_jiashi" />


                    <LinearLayout
                        style="@style/electron_linearLayout"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/ed_jiashi"
                            style="@style/electron_ed_content"
                            android:hint="@string/please_input" />

                    </LinearLayout>

                </RelativeLayout>

                <View style="@style/view_line" />


                <RelativeLayout
                    style="@style/electron_outer_linearLayout"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/electron_tv_title"
                        android:text="@string/xiafa_handle_chili" />

                    <LinearLayout
                        style="@style/electron_linearLayout"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/ed_chiliren"
                            style="@style/electron_ed_content"
                            android:hint="@string/xiafa_handle_chili_hint" />

                    </LinearLayout>

                </RelativeLayout>

                <View style="@style/view_line" />


                <RelativeLayout
                    style="@style/electron_outer_linearLayout"
                    android:layout_height="@dimen/y200"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        style="@style/electron_tv_title"
                        android:text="@string/xiafa_handle_chili_info" />


                    <LinearLayout
                        style="@style/electron_linearLayout"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/ed_chili_info"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/y200"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:hint="@string/please_input"
                            android:textSize="@dimen/x28" />

                    </LinearLayout>

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/y20"
                android:layout_marginTop="@dimen/y50"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/comit_button"
                    style="@style/button_layout"
                    android:background="@drawable/selector_psersoal_bt_bg"
                    android:text="处理"
                    android:textColor="@color/white" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>
